// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PocketInfo /> snapshot should match 1`] = `
<PocketInfo
  balance={100}
  currency="USD"
  value=""
>
  <span
    className={Object {}}
  >
    You have 
    100
    USD
  </span>
</PocketInfo>
`;

exports[`<PocketInfo /> snapshot should match when balance is less than value 1`] = `
<PocketInfo
  balance={100}
  currency="USD"
  value={150}
>
  <span
    className=".text-danger"
  >
    You have 
    100
    USD
  </span>
</PocketInfo>
`;
